--- a/build.properties
+++ b/build.properties
@@ -1,2 +1,2 @@
 email.from: test.example.demo123@gmail.com
-email.to: raviteja.madishetty@njclabs.com
+email.to: raviteja.madishetty@njclabs.com, madishettyraviteja2011@gmail.com
