--- a/cucumber-API-Framework/pom.xml
+++ b/cucumber-API-Framework/pom.xml
@@ -88,6 +88,7 @@
             <version>2.6.2</version>
             <scope>test</scope>
         </dependency>
+	  
     	<dependency>
             <groupId>com.jayway.restassured</groupId>
             <artifactId>rest-assured</artifactId>
@@ -162,5 +163,6 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+	  <dependency> <groupId>org.apache.maven.shared</groupId> <artifactId>file-management</artifactId> <version>1.2.1</version> </dependency>
   </dependencies>
 </project>
